[package]
name = "honeycomb"
version = "0.1.4"
authors = ["Adam McDaniel <adam.mcdanie17@gmail.com>"]
edition = "2018"
description = "A portable parser combinator library that does not require a runtime"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/adam-mcdaniel/honeycomb"
homepage = "https://github.com/adam-mcdaniel/honeycomb"
documentation = "https://docs.rs/honeycomb"
categories = [
    "no-std",
    "parsing",
    "embedded",
    "algorithms",
    "parser-implementations"
]

[lib]
doctest = false

[dependencies]